implement unitOfWork pattem

--- a/TsdDelivery.Api/appsettings.Development.json
+++ b/TsdDelivery.Api/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "DatabaseConnection": "Data Source=(local);Initial Catalog=tsdDB;uid=sa;pwd=1234567890;Integrated Security=True;Trust Server Certificate=true",
+  "JWTSecretKey": "ThisIsMoreThan128bitsSecretKey"
 }
