--- a/TsdDelivery.Infrastructures/TsdDelivery.Infrastructures.csproj
+++ b/TsdDelivery.Infrastructures/TsdDelivery.Infrastructures.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TsdDelivery.Application\TsdDelivery.Application.csproj" />
+  </ItemGroup>
+
 </Project>
