--- a/TsdDelivery.Api/TsdDelivery.Api.csproj
+++ b/TsdDelivery.Api/TsdDelivery.Api.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TsdDelivery.Application\TsdDelivery.Application.csproj" />
     <ProjectReference Include="..\TsdDelivery.Infrastructures\TsdDelivery.Infrastructures.csproj" />
   </ItemGroup>
 
