#24 - crd Service api, edit fluentapi in ShippingRateconfig

--- a/TsdDelivery.Application/TsdDelivery.Application.csproj
+++ b/TsdDelivery.Application/TsdDelivery.Application.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\TsdDelivery.Domain\TsdDelivery.Domain.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Models\ShippingRate\Response\" />
+  </ItemGroup>
+
 </Project>
