#27 - shippingRate api done

--- a/TsdDelivery.Application/TsdDelivery.Application.csproj
+++ b/TsdDelivery.Application/TsdDelivery.Application.csproj
@@ -27,8 +27,10 @@
   </ItemGroup>
 
 
+
   <ItemGroup>
-    <Folder Include="Models\ShippingRate\Response\" />
+    <Folder Include="Models\Reservation\Request\" />
+    <Folder Include="Models\Reservation\Response\" />
   </ItemGroup>
 
 </Project>
