#31 - fix upload image and modify a litle getAllVehicle

--- a/TsdDelivery.Api/appsettings.Development.json
+++ b/TsdDelivery.Api/appsettings.Development.json
@@ -5,7 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DatabaseConnection": "Data Source=(local);Initial Catalog=tsdDB;uid=sa;pwd=1234567890;Integrated Security=True;Trust Server Certificate=true",
+  "DatabaseConnection": "Server=202.92.4.186,1433;Database=TsdDeliveryDb;uid=sa;pwd=Viethung3900@;Trust Server Certificate=true",
+  "DatabaseConnectionLocal": "Data Source=(local);Initial Catalog=tsdDB;uid=sa;pwd=1234567890;Integrated Security=True;Trust Server Certificate=true",
   "JwtSettings": {
     "SecretKey": "ThisIsMoreThan128bitsSecretKey",
     "ExpiryMinutes": 30,
