--- a/TsdDelivery.Infrastructures/TsdDelivery.Infrastructures.csproj
+++ b/TsdDelivery.Infrastructures/TsdDelivery.Infrastructures.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,5 +19,6 @@
   <ItemGroup>
     <ProjectReference Include="..\TsdDelivery.Application\TsdDelivery.Application.csproj" />
   </ItemGroup>
+
 
 </Project>
