--- a/TsdDelivery.Api/appsettings.json
+++ b/TsdDelivery.Api/appsettings.json
@@ -25,5 +25,8 @@
     "IpnUrl": "https://localhost:7065/payment/api/momo-ipn",
     "AccessKey": "klm05TvNBzhg7h7j",
     "SecretKey": "at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa"
+  },
+  "Tomtom": {
+    "ApiKey": "PU5TwGtTl49qAdQFEJdpPshMZ5ijmvBV"
   }
 }
