config hangfire from sqlserver to redis

--- a/TsdDelivery.Api/appsettings.json
+++ b/TsdDelivery.Api/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "RedisConnection": "202.92.4.186:6379",
   "DatabaseConnection": "Server=202.92.4.186,1433;Database=TsdDeliveryDb;uid=sa;pwd=Viethung3900@;Trust Server Certificate=true",
   "DatabaseConnectionLocal": "Data Source=(local);Initial Catalog=tsdDB;uid=sa;pwd=1234567890;Integrated Security=True;Trust Server Certificate=true",
   "JwtSettings": {
@@ -22,6 +23,7 @@
     "PartnerCode": "MOMOBKUN20180529",
     "ReturnUrl": "https://tsddeliveryapi.azurewebsites.net/api/payment/momo-return",
     "PaymentUrl": "https://test-payment.momo.vn/v2/gateway/api/create",
+    "RefundUrl": "https://test-payment.momo.vn/v2/gateway/api/refund",
     "IpnUrl": "https://localhost:7065/payment/api/momo-ipn",
     "AccessKey": "klm05TvNBzhg7h7j",
     "SecretKey": "at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa"
