--- a/TsdDelivery.Api/appsettings.json
+++ b/TsdDelivery.Api/appsettings.json
@@ -21,7 +21,7 @@
   },
   "MomoConfig": {
     "PartnerCode": "MOMOBKUN20180529",
-    "ReturnUrl": "https://localhost:7065/api/payment/momo-return",
+    "ReturnUrl": "https://tsddeliveryapi.azurewebsites.net/api/payment/momo-return",
     "PaymentUrl": "https://test-payment.momo.vn/v2/gateway/api/create",
     "RefundUrl": "https://test-payment.momo.vn/v2/gateway/api/refund",
     "IpnUrl": "https://localhost:7065/payment/api/momo-ipn",
