add zalopay payment method

--- a/TsdDelivery.Api/appsettings.json
+++ b/TsdDelivery.Api/appsettings.json
@@ -28,6 +28,16 @@
     "AccessKey": "klm05TvNBzhg7h7j",
     "SecretKey": "at67qH6mk8w5Y1nAyMoYKMWACiEi2bsa"
   },
+  "ZaloPayConfig": {
+    "PaymentUrl": "https://sb-openapi.zalopay.vn/v2/create",
+    "AppId": 553,
+    "AppUser": "user123",
+    "Key1": "9phuAOYhan4urywHTh0ndEXiV3pKHr5Q",
+    "Key2": "eG4r0GcoNtRGbO8",
+    "RedirectUrl": "https://localhost:7065/payment/api/zalopay-return",
+    "IpnUrl": "https://localhost:7102/payment/api/zalopay-ipn",
+    "CallbackUrl" : "https://localhost:7065/payment/api/zalopay-callback"
+  },
   "Tomtom": {
     "ApiKey": "PU5TwGtTl49qAdQFEJdpPshMZ5ijmvBV"
   }
