--- a/TsdDelivery.Application/TsdDelivery.Application.csproj
+++ b/TsdDelivery.Application/TsdDelivery.Application.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Services\VnPay\Response\" />
     <ProjectReference Include="..\TsdDelivery.Domain\TsdDelivery.Domain.csproj" />
     <Folder Include="Models\Transaction\Request\" />
     <Folder Include="Models\Wallet\Request\" />
